--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Emilys+Candy&family=Merienda:wght@400;700&family=Raleway:wght@400;700&display=swap");
+    </style>
     <title>Cookie Heaven</title>
   </head>
 
