remove lessons, update to sushi, fixes

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Emilys+Candy&family=Merienda:wght@400;700&family=Raleway:wght@400;700&display=swap");
     </style>
-    <title>Cookie Heaven</title>
+    <title>Sushi Heaven</title>
   </head>
 
   <body>
