--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
@@ -14,7 +14,7 @@
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#ffffff" />
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Emilys+Candy&family=Merienda:wght@400;700&family=Raleway:wght@400;700&display=swap");
+      @import url('https://fonts.googleapis.com/css2?family=Emilys+Candy&family=Merienda:wght@400;700&family=Raleway:wght@400;700&display=swap');
     </style>
     <title>Sushi Heaven</title>
   </head>
